base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pipeline-api
  labels:
    app: pipeline-api
spec:
  type: ClusterIP
  selector:
    app: pipeline-api
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
